# tpf-bandeco

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Assets/Levels/: Level-1.piskel  level1-1.csv  level1-1.tmx  level1-2.csv  level1-2.tmx  level1.csv  level1.tmx  level1.tsx  level2.csv  level2.tmx  prototype.tsx
Assets/Levels/Level1-1/: level1-1.csv  level1-1.tmx
Assets/Prototype/: PrototypeTile.xcf
Assets/Sprites/Blocks/: texture.json
Assets/Sprites/Goomba/: texture.json
Assets/Sprites/Mario/: texture.json
Assets/Sprites/PlayerB/: Player.json  PlayerB.json
Assets/Sprites/PlayerD/: PlayerD.json
Source/: AudioSystem.cpp  AudioSystem.h  CSV.h  Game.cpp  Game.h  HUD.cpp  HUD.h  Json.h  Level.cpp  Level.h  Main.cpp  Math.cpp  Math.h  OrderManager.cpp  OrderManager.h  Random.cpp  Random.h  SpatialHashing.cpp  SpatialHashing.h
Source/Actors/: Actor.cpp  Actor.h  Block.cpp  Block.h  Deliver.cpp  Deliver.h  FoodBox.cpp  FoodBox.h  FoodBoxBlock.cpp  FoodBoxBlock.h  Goomba.cpp  Goomba.h  Item.cpp  Item.h  Mario.cpp  Mario.h  Pan.cpp  Pan.h  Plate.cpp  Plate.h  Player.cpp  Player.h  Pot.cpp  Pot.h  ProgressBar.cpp  ProgressBar.h  Spawner.cpp  Spawner.h  Stove.cpp  Stove.h  Table.cpp  Table.h  TableCut.cpp  TableCut.h  Trash.cpp  Trash.h
Source/Blocks/: Block.cpp  Block.h  Cabinet.cpp  Cabinet.h  Deliver.cpp  Deliver.h  Drainer.cpp  Drainer.h  FoodBox.cpp  FoodBox.h  Sink.cpp  Sink.h  Stove.cpp  Stove.h  Table.cpp  Table.h  TableCut.cpp  TableCut.h  Trash.cpp  Trash.h
Source/Components/: Component.cpp  Component.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  AABBColliderComponent.h  CircleColliderComponent.cpp  CircleColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawPolygonComponent.cpp  DrawPolygonComponent.h  DrawRectangleComponent.cpp  DrawRectangleComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h
Source/UIElements/: UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIFont.cpp  UIFont.h  UIImage.cpp  UIImage.h  UIScreen.cpp  UIScreen.h  UIText.cpp  UIText.h
